--- a/index.html
+++ b/index.html
@@ -258,38 +258,44 @@
 	<table align=center width=95%>
 		<tr>
 			<th style="font-size:20px">Label</th>
-			<th style="font-size:20px">Visual Video &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; GelSight Video</th>
+			<th style="font-size:20px">Visual Video &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; GelSight Video</th>
 		</tr>
 		<tr>
 			<th style="font-size:20px">Wall</th>
 
 			<th>
-				<video controls class="html-video" width="256" height="144"><source src="./resources/video/vis1.mp4" type="video/mp4"></video>
-				<video controls class="html-video" width="256" height="144"><source src="./resources/video/gel1.mp4" type="video/mp4"></video><br>
+				<video controls class="html-video" width="480" height="189"><source src="./resources/video/comb1.mp4" type="video/mp4"></video>
+				<!-- <video controls class="html-video" width="256" height="144"><source src="./resources/video/gel1.mp4" type="video/mp4"></video><br> -->
 			</th>
 		</tr>
 		<tr>
 			<th style="font-size:20px">Grass</th>
 			<th>
-				<video controls class="html-video" width="256" height="144"><source src="./resources/video/vis2.mp4" type="video/mp4"></video>
-				<video controls class="html-video" width="256" height="144"><source src="./resources/video/gel2.mp4" type="video/mp4"></video><br>
+				<video controls class="html-video" width="480" height="189"><source src="./resources/video/comb2.mp4" type="video/mp4"></video>
+				<!-- <video controls class="html-video" width="256" height="144"><source src="./resources/video/gel2.mp4" type="video/mp4"></video><br> -->
 
 			</th>
 		</tr>
 		<tr>
 			<th style="font-size:20px">Brick</th>
 			<th>
-				<video controls class="html-video" width="256" height="144"><source src="./resources/video/vis3.mp4" type="video/mp4"></video>
-				<video controls class="html-video" width="256" height="144"><source src="./resources/video/gel3.mp4" type="video/mp4"></video><br>
+				<video controls class="html-video" width="480" height="189"><source src="./resources/video/comb3.mp4" type="video/mp4"></video>
+				<!-- <video controls class="html-video" width="256" height="144"><source src="./resources/video/gel3.mp4" type="video/mp4"></video><br> -->
 
 			</th>
 		</tr>
+
 		<tr>
 			<th style="font-size:20px">Synthetic Fabric</th>
 			<th>
-				<video controls class="html-video" width="256" height="144"><source src="./resources/video/vis4.mp4" type="video/mp4"></video>
-				<video controls class="html-video" width="256" height="144"><source src="./resources/video/gel4.mp4" type="video/mp4"></video><br>
+				<video controls class="html-video" width="480" height="189"><source src="./resources/video/comb4.mp4" type="video/mp4"></video>
+			</th>
+		</tr>
 
+		<tr>
+			<th style="font-size:20px">Wood</th>
+			<th>
+				<video controls class="html-video" width="480" height="189"><source src="./resources/video/comb5.mp4" type="video/mp4"></video>
 			</th>
 		</tr>
 		</table><br>
