--- a/index.html
+++ b/index.html
@@ -302,7 +302,6 @@
 		
 
 
-  		  <a name="bw_legacy"></a>
   		  <center><h1>Applications</h1></center>
 			To evaluate the effectiveness of our dataset, we perform tasks that are designed to span a variety of application domains, including representation learning, image synthesis, and future prediction.
 			<center><h3>Multimodal self-supervised representation learning</h3></center>
@@ -330,6 +329,9 @@
 			<center>
 				<a href="./resources/images/video_pred1.png"><img class="rounded" src = "./resources/images/video_pred1.png" height="400px" width="1000px"></img></href></a><br>
 			</center>
+		
+		<center><h1>Acknowledgements</h1></center>
+		We thank Xiaofeng Guo and Yufan Zhang for the extensive help with the GelSight sensor, and thank Daniel Geng, Yuexi Du and Zhaoying Pan for the helpful discussions. This work was supported in part by Cisco Systems.
 
   		  <!-- along with miscellaneous photos. -->
   		  <!-- <br>
